err/treetoreads.err
Listing '.'...
Listing './bin'...
Compiling './bin/sumlabels.py'...
Compiling './bin/sumtrees.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DendroPy-4.3.0.egg-info'...
Listing './lib/python3.5/site-packages/TreeToReads-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/dendropy'...
Listing './lib/python3.5/site-packages/dendropy/calculate'...
Listing './lib/python3.5/site-packages/dendropy/dataio'...
Listing './lib/python3.5/site-packages/dendropy/datamodel'...
Listing './lib/python3.5/site-packages/dendropy/interop'...
Listing './lib/python3.5/site-packages/dendropy/legacy'...
Listing './lib/python3.5/site-packages/dendropy/mathlib'...
Listing './lib/python3.5/site-packages/dendropy/model'...
Listing './lib/python3.5/site-packages/dendropy/simulate'...
Listing './lib/python3.5/site-packages/dendropy/test'...
Listing './lib/python3.5/site-packages/dendropy/test/benchmark'...
Listing './lib/python3.5/site-packages/dendropy/test/data'...
Listing './lib/python3.5/site-packages/dendropy/test/data/chars'...
Listing './lib/python3.5/site-packages/dendropy/test/data/mixed'...
Listing './lib/python3.5/site-packages/dendropy/test/data/other'...
Listing './lib/python3.5/site-packages/dendropy/test/data/splits'...
Listing './lib/python3.5/site-packages/dendropy/test/data/trees'...
Listing './lib/python3.5/site-packages/dendropy/test/support'...
Listing './lib/python3.5/site-packages/dendropy/utility'...
Listing './lib/python3.5/site-packages/dendropy/utility/libexec'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/treetoreads.py'...
***   File "./lib/python3.5/site-packages/treetoreads.py", line 249
    print "scaler is {}\n".format(self.seqgen_scaler)
                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
